# fermions

./: .gitignore  CMakeLists.txt  README.md  default.cfg  plot.py
src/: CMakeLists.txt  config.f95  distributions.f95  gauss_int.f95  libraries.f95  libraries.f95.in  main.f95  polynomials.f95  precision.f95  sle_solve.f95
